--- a/.github/workflows/deploy-dev-cage.yml
+++ b/.github/workflows/deploy-dev-cage.yml
@@ -24,3 +24,6 @@ jobs:
           echo "$EV_CERT" > cert.pem
           echo "$EV_KEY" > key.pem
           ev-cage deploy -c cage.dev.toml
+
+# ev-cage build --write --output . -c cage.dev.toml
+# TODO https://stackoverflow.com/questions/57921401/push-to-origin-from-github-action/58393457#58393457
