--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-
   "name": "nitro-secure-service",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "npx tsc",
+    "build": "tsc",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
     "start": "node dist/app.js"
   },
   "dependencies": {
+    "@evervault/sdk": "^3.12.4",
     "body-parser": "^1.20.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -24,6 +24,5 @@
     "eslint": "^8.42.0",
     "nodemon": "^2.0.22",
     "typescript": "^5.1.3"
-
   }
 }
