--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "build": "tsc",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
-    "start": "node dist/app.js"
+    "dev": "nodemon",
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "@evervault/sdk": "^3.12.4",
@@ -23,6 +23,7 @@
     "concurrently": "^8.2.0",
     "eslint": "^8.42.0",
     "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   }
 }
