disable API key auth for cage

--- a/cage.dev.toml
+++ b/cage.dev.toml
@@ -4,7 +4,7 @@ app_uuid = "app_b81dd8dc1c0d"
 team_uuid = "team_e59a7c8b0849"
 debug = true
 dockerfile = "./Dockerfile"
-api_key_auth = true
+api_key_auth = false
 trx_logging = true
 disable_tls_termination = false
 
