--- a/cage.dev-insecure.toml
+++ b/cage.dev-insecure.toml
@@ -1,5 +1,5 @@
-name = "nitro-secure-service"
-uuid = "cage_56b510bbadc0"
+name = "nitro-secure-service-dev-insecure"
+uuid = "cage_8d1c307ebc98"
 app_uuid = "app_b81dd8dc1c0d"
 team_uuid = "team_e59a7c8b0849"
 debug = true
@@ -7,6 +7,7 @@ dockerfile = "./Dockerfile"
 api_key_auth = true
 trx_logging = true
 disable_tls_termination = false
+forward_proxy_protocol = false
 
 [egress]
 enabled = true
@@ -14,5 +15,5 @@ destinations = ["*"]
 ports = ["443"]
 
 [signing]
-certPath = ".\\cert.pem"
-keyPath = ".\\key.pem"
+certPath = "./cert.pem"
+keyPath = "./key.pem"
