--- a/.github/workflows/deploy-dev-insecure-cage.yml
+++ b/.github/workflows/deploy-dev-insecure-cage.yml
@@ -8,7 +8,7 @@ on:
     paths:
       - .github/workflows/deploy-dev-insecure-cage.yml
       - src/**/*
-      - ${{ env.TOML_FILE_NAME }}
+      - '${{ env.TOML_FILE_NAME }}'
     branches:
       - develop
 
