update workflow files again to fix bullshit arbitrary restrictions on where you can use environment vars

--- a/.github/workflows/deploy-dev-cage.yml
+++ b/.github/workflows/deploy-dev-cage.yml
@@ -8,7 +8,7 @@ on:
     paths:
       - .github/workflows/deploy-dev-cage.yml
       - src/**/*
-      - '${{ env.TOML_FILE_NAME }}'
+      - cage.dev.toml
     branches:
       - develop
 
