--- a/.github/workflows/deploy-dev-insecure-cage.yml
+++ b/.github/workflows/deploy-dev-insecure-cage.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Upload Cert
         run: |
-          ev-cage cert upload -c $TOML_FILE_PATH
+          ev-cage cert upload -c $TOML_FILE_NAME
 
 # ev-cage build --write --output . -c cage.dev.toml
 # TODO https://stackoverflow.com/questions/57921401/push-to-origin-from-github-action/58393457#58393457
