--- a/package.json
+++ b/package.json
@@ -25,14 +25,16 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "@types/aws-sdk": "^2.7.0",
     "@types/body-parser": "^1.19.2",
     "@types/chai": "^4.3.5",
     "@types/chai-http": "^4.2.0",
     "@types/express": "^4.17.17",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^20.3.1",
+    "@types/node": "^20.5.9",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
+    "aws-sdk": "^2.1452.0",
     "chai": "^4.3.7",
     "chai-http": "^4.4.0",
     "concurrently": "^8.2.0",
@@ -40,6 +42,7 @@
     "husky": "^8.0.3",
     "mocha": "^10.2.0",
     "nodemon": "^2.0.22",
+    "toml": "^3.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   }
