--- a/.github/workflows/deploy-dev-cage.yml
+++ b/.github/workflows/deploy-dev-cage.yml
@@ -2,6 +2,7 @@ name: Deploy Dev Cage
 
 env:
   TOML_FILE_NAME: 'cage.dev.toml'
+  STAGE: dev
 
 on:
   push:
@@ -29,12 +30,21 @@ jobs:
           echo "$EV_KEY" > key.pem
           ev-cage deploy -c $TOML_FILE_NAME
 
-      - name: Save PCR Attestations
+      - name: Save PCR Attestations to Artifacts
         uses: actions/upload-artifact@v3
         with:
             name: pcr-attestations
             path: ${{ env.TOML_FILE_NAME }}
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.CDK_DEPLOYMENT_AMAZON_ACCESS_ID }}
+          aws-secret-access-key: ${{ secrets.CDK_DEPLOYMENT_AMAZON_SECRET_KEY }}
+          aws-region: us-east-1
+
+      - name: Upload PCRs to AWSSM
+        run: node scripts/upload-pcrs.js $TOML_FILE_NAME nitro-secure-service/$STAGE/pcrs
       #- name: Upload Cert
       #  run: |
       #    ev-cage cert upload -c TOML_FILE_NAME
