--- a/.github/workflows/deploy-dev-insecure-cage.yml
+++ b/.github/workflows/deploy-dev-insecure-cage.yml
@@ -2,6 +2,7 @@ name: Deploy Dev (Insecure) Cage for Testing
 
 env:
   TOML_FILE_NAME: 'cage.dev-insecure.toml'
+  STAGE: dev-insecure
 
 on:
   push:
@@ -35,6 +36,15 @@ jobs:
             name: pcr-attestations
             path: ${{ env.TOML_FILE_NAME }}
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.CDK_DEPLOYMENT_AMAZON_ACCESS_ID }}
+          aws-secret-access-key: ${{ secrets.CDK_DEPLOYMENT_AMAZON_SECRET_KEY }}
+          aws-region: us-east-1
+
+      - name: Upload PCRs to AWSSM
+        run: node scripts/upload-pcrs.js $TOML_FILE_NAME nitro-secure-service/$STAGE/pcrs
       #- name: Upload Cert
       #  run: |
       #    ev-cage cert upload -c $TOML_FILE_NAME
