--- a/.github/workflows/deploy-staging-cage.yml
+++ b/.github/workflows/deploy-staging-cage.yml
@@ -2,6 +2,7 @@ name: Deploy Staging Cage
 
 env:
   TOML_FILE_NAME: 'cage.staging.toml'
+  STAGE: staging
 
 on:
   push:
@@ -39,5 +40,14 @@ jobs:
         run: |
           ev-cage cert upload -c TOML_FILE_NAME
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.CDK_DEPLOYMENT_AMAZON_ACCESS_ID }}
+          aws-secret-access-key: ${{ secrets.CDK_DEPLOYMENT_AMAZON_SECRET_KEY }}
+          aws-region: us-east-1
+
+      - name: Upload PCRs to AWSSM
+        run: node scripts/upload-pcrs.js $TOML_FILE_NAME nitro-secure-service/$STAGE/pcrs
 # ev-cage build --write --output . -c cage.dev.toml
 # TODO https://stackoverflow.com/questions/57921401/push-to-origin-from-github-action/58393457#58393457
