--- a/.github/workflows/deploy-staging-cage.yml
+++ b/.github/workflows/deploy-staging-cage.yml
@@ -48,6 +48,6 @@ jobs:
           aws-region: us-east-1
 
       - name: Upload PCRs to AWSSM
-        run: node scripts/upload-pcrs.js $TOML_FILE_NAME nitro-secure-service/$STAGE/pcrs
+        run: cd scripts && yarn run install && node scripts/upload-pcrs.js $TOML_FILE_NAME nitro-secure-service/$STAGE/pcrs
 # ev-cage build --write --output . -c cage.dev.toml
 # TODO https://stackoverflow.com/questions/57921401/push-to-origin-from-github-action/58393457#58393457
