--- a/.github/workflows/deploy-dev-cage.yml
+++ b/.github/workflows/deploy-dev-cage.yml
@@ -49,4 +49,4 @@ jobs:
           node-version: 18
 
       - name: Upload PCRs to AWSSM
-        run: yarn add toml fs aws-sdk && node scripts/upload-pcrs.js $TOML_FILE_NAME nitro-secure-service/$STAGE/pcrs
+        run: cd scripts && yarn && node upload-pcrs.js $TOML_FILE_NAME nitro-secure-service/$STAGE/pcrs
