--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "build": "tsc",
     "dev": "nodemon",
     "start": "node --experimental-specifier-resolution=node dist/index.js",
-    "lint": "eslint src/*.ts src/**/*.ts tests/*.ts tests/**/*.ts",
-    "test": "mocha tests/**/*.spec.ts --timeout 2000 --exit"
+    "lint": "eslint 'src/**/*.ts' 'tests/**/*.ts'",
+    "test": "mocha 'tests/**/*.spec.ts' --timeout 2000 --exit",
+    "prettier": "prettier --write 'src/**/*.ts' 'tests/**/*.ts'"
   },
   "dependencies": {
     "@evervault/sdk": "^4.0.0",
@@ -41,7 +42,8 @@
     "eslint": "^8.42.0",
     "husky": "^8.0.3",
     "mocha": "^10.2.0",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.0.3",
+    "prettier": "^3.2.4",
     "toml": "^3.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
