--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.1.4",
-    "ethers": "^6.6.7",
+    "ethers": "6.10.0",
     "express": "^4.18.2",
     "morgan": "~1.9.1"
   },
