--- a/cage.dev.toml
+++ b/cage.dev.toml
@@ -2,7 +2,7 @@ name = "nitro-secure-service-dev"
 uuid = "cage_49cd44b168a0"
 app_uuid = "app_b81dd8dc1c0d"
 team_uuid = "team_e59a7c8b0849"
-debug = true
+debug = false
 dockerfile = "./Dockerfile"
 api_key_auth = true
 trx_logging = true
