feat: update workflows to trigger when TOML files are updated

--- a/.github/workflows/deploy-dev-cage.yml
+++ b/.github/workflows/deploy-dev-cage.yml
@@ -10,6 +10,7 @@ on:
       - .github/workflows/deploy-dev-cage.yml
       - src/**/*
       - cage.dev.toml
+      - enclave.dev.toml
     branches:
       - develop
 
