--- a/.github/workflows/deploy-staging-cage.yml
+++ b/.github/workflows/deploy-staging-cage.yml
@@ -10,6 +10,7 @@ on:
       - .github/workflows/deploy-staging-cage.yml
       - src/**/*
       - cage.staging.toml
+      - enclave.staging.toml
     branches:
       - staging
 
