--- a/.github/workflows/deploy-staging-cage.yml
+++ b/.github/workflows/deploy-staging-cage.yml
@@ -26,7 +26,7 @@ jobs:
           EV_KEY: ${{ secrets.STAGING_EVERVAULT_KEY }}
 
         run: |
-          curl https://enclave-build-assets.evervault.com/cli/v1/install -sL | sh
+          curl https://enclave-build-assets.evervault.com/cli/v1/1.0.3/install -sL | sh
           echo "$EV_CERT" > cert.pem
           echo "$EV_KEY" > key.pem
           ev-enclave deploy -c $TOML_FILE_NAME
