--- a/.github/workflows/deploy-staging-cage.yml
+++ b/.github/workflows/deploy-staging-cage.yml
@@ -27,10 +27,10 @@ jobs:
           EV_KEY: ${{ secrets.STAGING_EVERVAULT_KEY }}
 
         run: |
-          curl https://enclave-build-assets.evervault.com/cli/v1/1.0.3/install -sL | sh
+          sh <(curl https://cli.evervault.com/v4/install -sL)
           echo "$EV_CERT" > cert.pem
           echo "$EV_KEY" > key.pem
-          ev-enclave deploy -c $TOML_FILE_NAME
+          ev enclave deploy -c $TOML_FILE_NAME
 
       - name: Save PCR Attestations
         uses: actions/upload-artifact@v3
