--- a/.github/workflows/deploy-prod-cage.yml
+++ b/.github/workflows/deploy-prod-cage.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Deploy Prod Cage
         env:
           EV_API_KEY: ${{ secrets.PROD_EVERVAULT_API_KEY }}
+          EV_APP_UUID: ${{ secrets.PROD_EVERVAULT_APP_UUID }}
           EV_CERT: ${{ secrets.PROD_EVERVAULT_CERT }}
           EV_KEY: ${{ secrets.PROD_EVERVAULT_KEY }}
 
