--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": ">=18.19.0"
+  },
   "scripts": {
     "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\"",
     "scan:secrets": "ggshield secret scan path -y -r .",
@@ -21,9 +24,10 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.1.4",
-    "ethers": "6.10.0",
-    "express": "^4.18.2",
-    "morgan": "~1.9.1"
+    "ethers": "6.13.2",
+    "express": "^4.19.2",
+    "morgan": "~1.9.1",
+    "node-jose": "^2.2.0"
   },
   "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
@@ -33,6 +37,7 @@
     "@types/express": "^4.17.17",
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.5.9",
+    "@types/node-jose": "^1.1.13",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
     "aws-sdk": "^2.1452.0",
