--- a/.eslintrc
+++ b/.eslintrc
@@ -12,5 +12,6 @@
   "plugins": ["@typescript-eslint"],
   "rules": {
     "@typescript-eslint/no-explicit-any": "warn",
+    "no-console": "error",
   },
 }
