--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nitro-secure-service",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "type": "module",
   "engines": {
@@ -18,6 +18,7 @@
     "prettier": "prettier --write 'src/**/*.ts' 'tests/**/*.ts'"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.631.0",
     "@evervault/sdk": "^4.3.0",
     "axios": "^1.7.3",
     "body-parser": "^1.20.2",
