--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,7 +14,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.CDK_DEPLOYMENT_AMAZON_ACCESS_ID }}
+          aws-secret-access-key: ${{ secrets.CDK_DEPLOYMENT_AMAZON_SECRET_KEY }}
+          aws-region: 'us-east-1'
 
       - name: Install Dependencies
         id: install-deps
