--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
   },
   "dependencies": {
     "@evervault/sdk": "^4.3.0",
-    "axios": "^1.4.0",
+    "@zelusio/auth-lib": "^1.2.0",
+    "axios": "^1.7.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.1.4",
-    "ethers": "6.10.0",
-    "express": "^4.18.2",
+    "ethers": "6.13.2",
+    "express": "^4.19.2",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
