--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,7 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      - name: Create .npmrc for access to GitHub Packages
+        run: echo -e "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}\n@zelusio:registry=https://npm.pkg.github.com/" > .npmrc
 
       - name: Install Dependencies
         id: install-deps
@@ -33,8 +36,13 @@ jobs:
     name: Try Building Dockerfile
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Create .npmrc for access to GitHub Packages
+        run: echo -e "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}\n@zelusio:registry=https://npm.pkg.github.com/" > .npmrc
+
       - name: Build Dockerfile
         env:
           ENVIRONMENT: test
-        run: docker build -t nitro-secure-service:test-build -f Dockerfile .
+        run: docker build -t nitro-secure-service:test-build -f Dockerfile . --secret id=npmrc,src=.npmrc
