--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\"",
+    "prepare": "husky || true",
     "scan:secrets": "ggshield secret scan path -y -r .",
     "scan:secrets:precommit": "ggshield secret scan pre-commit",
     "build": "tsc",
@@ -15,38 +15,36 @@
     "prettier": "prettier --write 'src/**/*.ts' 'tests/**/*.ts'"
   },
   "dependencies": {
-    "@evervault/sdk": "^4.3.0",
+    "@evervault/sdk": "^6.2.3",
     "@zelusio/auth-lib": "^1.2.1",
-    "axios": "^1.7.3",
+    "axios": "^1.7.7",
     "body-parser": "^1.20.3",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "dotenv": "^16.1.4",
+    "dotenv": "^16.4.5",
     "ethers": "6.13.2",
-    "express": "^4.21.0",
-    "morgan": "~1.9.1"
+    "express": "^4.21.0"
   },
   "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
     "@types/body-parser": "^1.19.5",
-    "@types/chai": "^4.3.5",
+    "@types/chai": "^4.3.19",
     "@types/chai-http": "^4.2.0",
     "@types/express": "^4.17.21",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^20.5.9",
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "@typescript-eslint/parser": "^6.2.1",
-    "aws-sdk": "^2.1452.0",
-    "chai": "^4.3.7",
+    "@types/mocha": "^10.0.8",
+    "@types/node": "^22.5.5",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "aws-sdk": "^2.1691.0",
+    "chai": "^4.5.0",
     "chai-http": "^4.4.0",
-    "concurrently": "^8.2.0",
     "eslint": "^8.42.0",
-    "husky": "^8.0.3",
-    "mocha": "^10.2.0",
-    "nodemon": "^3.0.3",
-    "prettier": "^3.2.4",
+    "eslint-plugin-mocha": "^10.5.0",
+    "eslint-plugin-security": "^3.0.1",
+    "husky": "^9.1.6",
+    "mocha": "^10.7.3",
+    "nodemon": "^3.1.7",
+    "prettier": "^3.3.3",
     "toml": "^3.0.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
   }
 }
