--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "prettier": "prettier --write 'src/**/*.ts' 'tests/**/*.ts'"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.631.0",
+    "@aws-sdk/client-s3": "^3.658.1",
     "@evervault/sdk": "^6.2.3",
     "@zelusio/auth-lib": "^1.2.1",
     "axios": "^1.7.7",
@@ -31,11 +31,11 @@
   "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
     "@types/body-parser": "^1.19.5",
-    "@types/chai": "^4.3.19",
+    "@types/chai": "^4.3.20",
     "@types/chai-http": "^4.2.0",
     "@types/express": "^4.17.21",
     "@types/mocha": "^10.0.8",
-    "@types/node": "^22.5.5",
+    "@types/node": "^22.7.4",
     "@types/node-jose": "^1.1.13",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
@@ -47,6 +47,7 @@
     "eslint-plugin-security": "^3.0.1",
     "husky": "^9.1.6",
     "mocha": "^10.7.3",
+    "nock": "^13.5.5",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
     "toml": "^3.0.0",
