--- a/.github/workflows/deploy-dev-cage.yml
+++ b/.github/workflows/deploy-dev-cage.yml
@@ -19,7 +19,7 @@ jobs:
   deploy-cage:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Deploy Dev Cage
         env:
           EV_API_KEY: ${{ secrets.DEV_EVERVAULT_API_KEY }}
@@ -31,10 +31,10 @@ jobs:
           sh <(curl https://cli.evervault.com/v4/install -sL)
           echo "$EV_CERT" > cert.pem
           echo "$EV_KEY" > key.pem
-          ev enclave deploy -c $TOML_FILE_NAME
+          ev enclave deploy -v -c $TOML_FILE_NAME
 
       - name: Save PCR Attestations to Artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: pcr-attestations
           path: ${{ env.TOML_FILE_NAME }}
@@ -47,7 +47,7 @@ jobs:
           aws-region: us-east-1
 
       - name: Setup Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 18
 
