--- a/enclave.prod.toml
+++ b/enclave.prod.toml
@@ -12,7 +12,8 @@ forward_proxy_protocol = false
 trusted_headers = []
 
 [egress]
-enabled = false
+enabled = true
+destinations = ["auth.zelus.io","*.amazonaws.com"]
 
 [signing]
 certPath = "./cert.pem"
