--- a/enclave.prod.toml
+++ b/enclave.prod.toml
@@ -9,7 +9,7 @@ api_key_auth = true
 trx_logging = true
 tls_termination = true
 forward_proxy_protocol = false
-trusted_headers = []
+trusted_headers = ["X-Request-Id"]
 
 [egress]
 enabled = true
