--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "ethers": "6.13.2",
-    "express": "^4.21.0",
-    "node-jose": "^2.2.0"
+    "express": "^4.21.0"
   },
   "devDependencies": {
     "@evervault/attestation-bindings": "^1.0.0",
@@ -37,7 +36,6 @@
     "@types/express": "^4.17.21",
     "@types/mocha": "^10.0.8",
     "@types/node": "^22.7.4",
-    "@types/node-jose": "^1.1.13",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "aws-sdk": "^2.1691.0",
