--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "chai-http": "^4.4.0",
     "eslint": "^8.42.0",
     "eslint-plugin-mocha": "^10.5.0",
+    "eslint-plugin-require-extensions": "^0.1.3",
     "eslint-plugin-security": "^3.0.1",
     "husky": "^9.1.6",
     "mocha": "^10.7.3",
