--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
   ],
   "rules": {
     "@typescript-eslint/no-explicit-any": "warn",
-    "no-console": "error"
+    "no-console": "error",
+    "mocha/no-exclusive-tests": "error"
   }
 }
