feat: disable api key auth for the Enclave

--- a/enclave.prod.toml
+++ b/enclave.prod.toml
@@ -5,7 +5,7 @@ app_uuid = "app_d7c0fe35a2d6"
 team_uuid = "team_e59a7c8b0849"
 debug = false
 dockerfile = "./Dockerfile"
-api_key_auth = true
+api_key_auth = false
 trx_logging = true
 tls_termination = true
 forward_proxy_protocol = false
