--- a/enclave.dev.toml
+++ b/enclave.dev.toml
@@ -5,7 +5,7 @@ app_uuid = "app_b81dd8dc1c0d"
 team_uuid = "team_e59a7c8b0849"
 debug = false
 dockerfile = "./Dockerfile"
-api_key_auth = true
+api_key_auth = false
 trx_logging = true
 tls_termination = true
 forward_proxy_protocol = false
